# QHexEdit2

./: CMakeLists.txt  QHexEdit.hpp  _Sources.cmake
example/: main.cpp  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  qhexedit.pro  qhexedit.qrc  searchdialog.cpp  searchdialog.h  searchdialog.ui
example/translations/: qhexedit_cs.ts  qhexedit_de.ts  qhexedit_ru.ts
src/: chunks.h  qhexedit.cpp  qhexedit.h
